<resources>
	<string name="app_name">OO快拼</string>
    <string name="MAIN_DOWNLOAD_TITLE">OO快拼</string>
    <string name="MAIN_DOWNLOAD_CONTENT">用OO快拼，为生活提速！</string>
    <string name="SHARE_TITLE">加入OO大家庭，赢取千万大奖</string>
    <string name="SHARE_CONTENT">你离千万大奖就差一“点”了</string>
    <string name="INSURANCE_TIP1">保险额度： </string>
    <string name="INFO_COST_TIP1">平台信息费： </string>
    <string name="INFO_COST_TIP2">点</string>
    <string name="INSURANCE_FEE_TIP1">保险费：</string>
    <string name="PUBLONG_TIP1">(平台信息费 : </string>
    <string name="PUBLONG_TIP2">保险费 : </string>
    <string name="PUBLONG_TIP3">点/座</string>
    <string name="NO_INSURARANCE">由于您未通过身份验证，本单不提供保险!</string>
    <string name="INSURANCE_IN_PROCESS">保单信息正在生成!</string>
    <string name="INSURANCE_CLOSED">订单已关闭，保单已失效！</string>
	<string name="STR_CANNOT_TAKEPHOTO">抱歉，您的手机不会保存照片!</string>
	<string name="STR_SUCCESS">操作成功</string>
	<string name="STR_FAILURE">操作失败</string>
	<string name="STR_CONFIRM_LOGOUT_WITHLOGIN">确定退出当前登录吗？</string>
	<string name="STR_CONFIRM_NOTREGISTERED_NOWREGISTER">您尚未登录，首先需要登录</string>
	<string name="STR_QUEDING">确定</string>
	<string name="STR_QUEREN">确认</string>
	<string name="STR_QUXIAO">取消</string>
	<string name="STR_SHI">是</string>
	<string name="STR_FOU">否</string>
	<string name="STR_FANHUI">返回</string>
	<string name="STR_KAISHITIYAN">开始体验</string>
	<string name="STR_QINGSHAOHOU">请稍候...</string>
	<string name="STR_CONN_ERROR">网络不给力，稍后再试吧</string>
	<string name="STR_DRIVER_NOTVERIFIED">必须验证车主身份才能接单</string>
	<string name="STR_PRESS_ONCEMORE_EXIT">再按一次退出OO车生活</string>
	<string name="STR_NOTE">提示</string>
	<string name="STR_CONFIRM_INSTALL">您确定要安装该软件吗?</string>
	<string name="STR_CONFIRM_CNCEL">您确定要取消吗?</string>
	<string name="STR_DOWNLOAD_OK">下载完成</string>
	<string name="STR_ERR_VERSION_INFO">版本错误</string>
	<string name="STR_CONFIRM_LOGOUT">您确定要退出登录吗?</string>
	<string name="STR_UPLOAD_PHOTO">上传图片</string>
    <string name="STR_UPLOAD_DRIVER_PHOTO">上传车主头像</string>
    <string name="STR_UPLOAD_CAR_PHOTO">上传爱车靓照</string>
    <string name="STR_ORDERING">抢单正在提交，请稍后.....</string>
    <string name="STR_MON">周一</string>
    <string name="STR_TUE">周二</string>
    <string name="STR_WED">周三</string>
    <string name="STR_THR">周四</string>
    <string name="STR_FRI">周五</string>
    <string name="STR_SAT">周六</string>
    <string name="STR_SUN">周日</string>
    <string name="STR_COMMUTEORDERING_HINT1">接单请求已发送</string>
    <string name="STR_COMMUTEORDERING_HINT2">请耐心等待拼友响应</string>
    <string name="STR_COMMUTEORDERING_HINT3">请耐心等待车主响应</string>
    <string name="STR_INSERT_FINDSTRING">请输入要搜索的单次</string>
    <string name="STR_SHEZHI">设置</string>
    <string name="STR_SELECT_COLOR">请选择颜色</string>
    <string name="STR_SELECT_BRAND">请选择品牌</string>
    <string name="STR_SELECT_TYPE">请选择车型</string>
	<string name="STR_KAISHIZHIXING">开 始\n执 行</string>
	<string name="STR_ZHIXINGZHONG">执行中</string>
	<string name="STR_QUPINGJIA">去评价</string>
	<string name="STR_QUZHIFU">去支付</string>
	<string name="STR_HAOPINGLV">好评率 :</string>
	<string name="STR_PINCHECISHU">拼车次数 :</string>
    <string name="STR_PINGTAI">平台</string>
    <string name="STR_ZHONGTUDIAN">中途点 :</string>
    <string name="STR_CHUDANSHIJIAN">出单时间 :</string>
	<string name="STR_YUYUESHIJIAN">预约时间 :</string>
	<string name="STR_NOTSELECTDAYS">没有选择出行日</string>
	<string name="STR_CHENGKEMEIYOUQUEREN">拼友没有确认订单, 试试下一个吧！</string>
	<string name="STR_CONTENTEMPTY">中评,差评需要输入内容</string>
	<string name="STR_PINGJIACHEZHU">评价车主</string>
	<string name="STR_PINGJIACHENGKE">评价拼友</string>
	<string name="STR_QUXIAODINGDANCHENGGONG">取消订单成功!</string>
	<string name="STR_TUIPIAO">退订</string>
	<string name="STR_CHEPAIHAO">车牌号 :</string>
	<string name="STR_DIANZICHEPIAO">拼车码 :</string>
	<string name="STR_QUXIAOCHENGGONG">取消订单成功!</string>
	<string name="STR_CHAKANCHEZHUWEIZHI">查看车主位置</string>
	<string name="STR_ZHIFULVDIAN">支付绿点</string>
	<string name="STR_BENCIPINCHELVDIAN">本次拼车绿点</string>
	<string name="STR_ZHIFU_NOTE">现在支付，车主将立即收到绿点\n24小时内，若未主动支付或投诉，系统将使用冻结绿点自动支付。</string>
	<string name="STR_SYDQZF">使用点券支付 :</string>
	<string name="STR_QUERENZHIFU">确认支付</string>
	<string name="STR_SHIJIZHIFU">实际支付</string>
	<string name="STR_HAIXUZHIFU">还需支付</string>
	<string name="STR_DIANQUANZHIFU">点券支付</string>
	<string name="STR_RESERVE_ORDER_XIAOTISHI">小提示 : 上下班拼车将自动预约下一出行日</string>
	<string name="STR_ZHIFUCHENGGONG">支付成功</string>
	<string name="STR_LVDIANBUZU">绿点不足</string>
	<string name="STR_WODEJINE">我的绿点 :</string>
	<string name="STR_QIANGZUOXUYAO">抢座需要 :</string>
	<string name="STR_FADANXUYAO">发单需要 :</string>
	<string name="STR_CHONGZHI">充值</string>
	<string name="STR_DQSJJFC">当前时间距发车</string>
	<string name="STR_BCTPJCSTPLD">本次退订将收取绿点</string>
	<string name="STR_TIAN">天</string>
	<string name="STR_TPLDSQGZ">退订绿点收取规则 :</string>
	<string name="STR_CHANGTUDINGDAN">长途订单</string>
	<string name="STR_XUYAOTUIPIAO">需要退订</string>
	<string name="STR_GONXIQIANGZUOCHENGGONG">恭喜抢座成功</string>
	<string name="STR_NDDZCPMM">您的拼车码 :</string>
	<string name="STR_QINGJILAO">请记牢!</string>
	<string name="STR_WJKZWDDDZCK">忘记可在我的订单中查看</string>
	<string name="STR_WANGQIANWODEDINGDAN">往前我的订单</string>
	<string name="STR_QZCFSJQDDZDDD">请在出发时间前到达指定地点</string>
	<string name="STR_YUYUE">预约</string>
	<string name="STR_SXBPCYY">上下班拼车预约</string>
    <string name="STR_DEFAULT_CITY">北京</string>
	<string name="STR_STARTDATE_PASSED">出发时间已经过了，超过1天才可发布</string>
	<string name="STR_FASONG">发送</string>
	<string name="STR_QQ_NOTINSTALLED">未安装QQ. 请下载手机QQ吧</string>
    <string name="STR_GIVEUP_CONFIRM">您确定要放弃吗?</string>
    <string name="STR_MSG_LAST_VERSION">已经是最新版本啦</string>
    <string name="STR_EVAL_HINT">详细评语</string>
	<string name="STR_ORDERTYPE_ONCE">同城</string>
	<string name="STR_ORDERTYPE_ONOFF">上下班</string>
	<string name="STR_ORDERTYPE_LONG">长途</string>
    <string name="STR_MSG_NO_ORDERS">暂时没有订单，现在去拼车吧</string>
	<string name="STR_PRICE_TOOLOW">抱歉,订单价格不能低于</string>
    <string name="STR_INPUT_COUPON_PASSWORD">请输入点券密码</string>
	<string name="chexing">车类型</string>
	<string name="chepaixing">车牌型</string>
	<string name="yanse">颜色</string>
    <string name="cheng_shi">市</string>
    <string name="STR_YEAR">年</string>
    <string name="STR_MONTH">月</string>
    <string name="STR_DAY">日</string>
    <string name="STR_HOUR">时</string>
    <string name="STR_MINUTE">分</string>
	<string name="STR_LOGOUT_SUCCESS">退出成功</string>
    <string name="STR_YUYUECHUFASHIJIAN">预订出发时间 ：</string>
    <string name="STR_ZONGYONGSHI">总用时：</string>
    <string name="STR_FENZHONG">分钟</string>
    <string name="STR_PINCHELICHENG">拼车里程：</string>
    <string name="STR_GONGLI">公里</string>
    <string name="STR_NO_ALIVE_PASS">所有的拼友都弃票了.该订单自动被关闭</string>
    <string name="STR_INSERT_STARTCITY">先输入起始城市</string>
    <string name="STR_INSERT_ENDCITY">先输入目的城市</string>
    <string name="STR_ERROR_PASSWORD_LENGTH">请输入密码</string>
    <string name="STR_DRVLONG_NO_PASSENGER">还没有拼友拼车呢</string>
    <string name="STR_REGISTE_AGREEMENT"><u>同意OO快拼协议</u></string>
    <string name="STR_PASSENGER_MAIN_VALIDATION_INFO">验证身份后小伙伴抢着和你拼车！</string>
	<string name="STR_PASSENGER_MAIN_VALIDATION_BUTTON">立刻去验证</string>
	<string name="STR_SEND_CITYORDER">同城快拼</string>
	<string name="STR_SEND_TRIPORDER">长途抢座</string>
    <string name="STR_PASSENGER_MAIN_NOTIF1">您周围有</string>
    <string name="STR_PASSENGER_MAIN_NOTIF2">0</string>
    <string name="STR_PASSENGER_MAIN_NOTIF3">位待拼车主</string>
    <string name="STR_END_SERVICE_CONFIRM">是否确定完成订单？</string>
    <string name="STR_WAIT_CHARGE">拼友正在充值，请稍等</string>
	<string name="STR_MAIN_TITLE_DRIVER">OO快拼-车主</string>
	<string name="STR_MAIN_TITLE_PASSENGER">OO快拼-拼友</string>
	<string name="STR_MAIN_TITLE">OO快拼</string>
	<string name="STR_MAIN_GOTOVERIFY">去认证</string>
	<string name="STR_MAIN_PERSON_NOTVERIFIED">未验证个人身份不能提现</string>
	<string name="STR_MAIN_DRIVER_NOTVERIFIED">验证完，小伙伴才能抢着和你拼哦！</string>
	<string name="STR_MAIN_TAB_SHOUYE">首页</string>
	<string name="STR_MAIN_TAB_WODEDINGDAN">我的订单</string>
	<string name="STR_MAIN_TAB_GERENZHONGXIN">个人中心</string>
	<string name="STR_MAIN_TAB_FENXIANG">分享</string>
	<string name="STR_MAIN_WODEGERENXINXI">我的个人信息</string>
	<string name="STR_MAIN_SHEZHIRICHANGLUXIAN">设置日常路线</string>
    <string name="STR_MAIN_SETLONGROUTE">设置长途路线</string>
	<string name="STR_MAIN_WODEJIANPAILVDIAN">我的减排绿点</string>
	<string name="STR_MAIN_WODEDIANQUAN">我的点券</string>
	<string name="STR_MAIN_PINCHEGONGLVE">拼车攻略</string>
	<string name="STR_MAIN_GUANYUOO">关于OO</string>
	<string name="STR_MAIN_TUICHUDENGLU">退出登录</string>
	<string name="STR_MAIN_WODEYAOQINGMA">我的邀请码</string>
	<string name="STR_MAIN_DOWNLOADQRCODE">APP下载二维码</string>
	<string name="STR_MAIN_SHARE_SMS">短信</string>
	<string name="STR_MAIN_SHARE_EMAIL">邮件</string>
	<string name="STR_MAIN_SHARE_SINA">微博</string>
	<string name="STR_MAIN_SHARE_TENGXUN">腾讯微博</string>
	<string name="STR_MAIN_SHARE_WEIXIN">微信</string>
	<string name="STR_MAIN_SHARE_WEIPENGYOUQUAN">朋友圈</string>
	<string name="STR_MAIN_SHARE_QQKONGJIAN">QQ空间</string>
	<string name="STR_MAIN_SHARE_QQHAOYOU">QQ好友</string>
	<string name="STR_MAIN_SHARE_MOMO">陌陌</string>
	<string name="STR_MAIN_SHARE_YIXIN">易信</string>
	<string name="STR_NEWSCENTER_TITLE">消息中心</string>
	<string name="STR_GONGGAO">公告</string>
	<string name="STR_DINGDANXIAOXI">订单消息</string>
	<string name="STR_TONGZHI">通知</string>
	<string name="STR_REGISTER_TITLE">用户注册</string>
	<string name="STR_REGISTER_USERNAME">用户名</string>
	<string name="STR_REGISTER_MOBILE">手机号</string>
	<string name="STR_REGISTER_GETVERIFYKEY">获取验证码</string>
	<string name="STR_REGISTER_VERIFYKEY">验证码</string>
	<string name="STR_REGISTER_NICKNAME">称呼</string>
	<string name="STR_REGISTER_PASSWORD">密码</string>
	<string name="STR_REGISTER_CONFIRMPWD">再次输入</string>
	<string name="STR_REGISTER_REQCODE">邀请码</string>
	<string name="STR_REGISTER_SELECT">( 选填 )</string>
	<string name="STR_REGISTER_MALE">先生</string>
	<string name="STR_REGISTER_FEMALE">女士</string>
	<string name="STR_REGISTER_MOBILE_CANNOT_EMPTY">手机号码不能为空</string>
	<string name="STR_REGISTER_MOBILE_LENGTH_NOTMATCH">手机号码需要11位数字</string>
	<string name="STR_REGISTER_USERNAME_CANNOT_EMPTY">用户名不能为空</string>
	<string name="STR_REGISTER_FORMAT_ERROR">用户名仅支持英文或数字,并使用英文开头</string>
	<string name="STR_REGISTER_NICKNAME_FORMAT_ERROR">昵称格式不准确</string>
    <string name="STR_REGISTER_USERNAME_TOO_SHORT">用户名长度必须在2-20位之间</string>
	<string name="STR_REGISTER_NICKNAME_CANNOT_EMPTY">昵称不能为空</string>
    <string name="STR_REGISTER_REQUEST_CODE_EMPTY">验证码不能为空</string>
	<string name="STR_REGISTER_NICKNAME_LENGTH">昵称长度必须在2-10位之间</string>
	<string name="STR_REGISTER_PWD_TOO_SHORT">密码长度必须在6-16位之间</string>
	<string name="STR_REGISTER_PWD_CANNOT_EMPTY">密码不能为空</string>
	<string name="STR_REGISTER_PWDCONF_NOTMATCH">密码输入得不正确</string>
	<string name="STR_REGISTER_VERIFYKEY_NOTMATCH">验证码不正确</string>
    <string name="STR_REGISTER_VERIFYKEY_TIMEOUT">验证码超时了，重新获取</string>
	<string name="STR_REGISTER_REVERIFY">您需要重新获取验证码</string>
	<string name="STR_REGISTER_NO_VERIFYKEY">还没有获取验证码</string>
	<string name="STR_REGISTER_SUCCESS">注册成功</string>
	<string name="STR_FEEDBACK_TITLE">给OO写信</string>
	<string name="STR_FEEDBACK_HINT">有什么话想对OO说吗? 在这里写下来吧</string>
	<string name="STR_FEEDBACK_SEND">发送</string>
    <string name="STR_WAITORDER_TITLE">同城快拼订单发布</string>
    <string name="STR_WAITORDER_CANCEL">取消订单</string>
    <string name="STR_UPPRICE_SETPRICE">您的报价</string>
    <string name="STR_UPPRICE_PRICE">100</string>
    <string name="STR_UPPRICE_PRICEMARK">点/次</string>
    <string name="STR_UPPRICE_SEND">再次发布</string>
    <string name="STR_UPPRICE_TIP">平台推荐价：110点/次</string>
    <string name="STR_UPPRICE_NOTE1">无车主应答，可能报价太低，</string>
    <string name="STR_UPPRICE_NOTE2">不如多打赏点给车主？</string>
    <string name="STR_COMMUTEORDERFINISH_TITLE">是否确定终止服务？</string>
    <string name="STR_COMMUTEORDERFINISH_HINT">小提示 ：</string>
    <string name="STR_COMMUTEORDERFINISH_HINTVAL">建议您提前和拼友沟通，如果对方已预约，您单方终止服务，对方有权给您差评或发起投诉</string>
</resources>