<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/parent_layout"
                android:background="@drawable/roundwhitewhite_frame" android:gravity="center">

    <RelativeLayout
            android:layout_width="400px"
            android:layout_height="440px"
            android:background="@drawable/roundwhitewhite_frame">
        <ImageView
                android:layout_width="154px"
                android:layout_height="119px"
                android:id="@+id/imgIcon" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
                android:layout_marginTop="30px" android:scaleType="fitCenter" android:src="@drawable/failicon"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="40px"
                android:text="@string/STR_LVDIANBUZU"
                android:id="@+id/lblTitle" android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true" android:gravity="center"
                android:textColor="@color/LIGHT_YELLOW_COLOR" android:textSize="28px"
                android:layout_below="@+id/imgIcon" android:layout_marginTop="30px"/>
	    <TextView
			    android:layout_width="200px"
			    android:layout_height="wrap_content"
			    android:text="@string/STR_WODEJINE"
			    android:id="@+id/lbl_my_balance" android:gravity="center|right" android:layout_below="@+id/lblTitle"
			    android:layout_alignParentRight="false" android:textColor="#707070" android:textSize="25px"
			    android:layout_marginTop="30px"/>
	    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="New Text"
			    android:id="@+id/txt_my_balance" android:layout_alignTop="@+id/lbl_my_balance"
			    android:layout_toRightOf="@+id/lbl_my_balance" android:layout_alignBottom="@+id/lbl_my_balance"
			    android:textSize="25px" android:textColor="#ff694d" android:gravity="center|left"
			    android:layout_alignParentRight="true" android:layout_alignParentLeft="false"
			    android:layout_marginLeft="10px"/>
	    <TextView
			    android:layout_width="200px"
			    android:layout_height="wrap_content"
			    android:text="@string/STR_QIANGZUOXUYAO"
			    android:id="@+id/lbl_order_price" android:gravity="center|right" android:layout_below="@+id/lbl_my_balance"
			    android:layout_alignParentRight="false" android:textColor="#707070" android:textSize="25px"
			    android:layout_marginTop="20px"/>
	    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="New Text"
			    android:id="@+id/txt_order_price" android:layout_alignTop="@+id/lbl_order_price"
			    android:layout_toRightOf="@+id/lbl_order_price" android:layout_alignBottom="@+id/lbl_order_price"
			    android:textSize="25px" android:textColor="#ff694d" android:gravity="center|left"
			    android:layout_alignParentRight="true" android:layout_alignParentLeft="false"
			    android:layout_marginLeft="10px"/>
	    <Button
			    android:layout_width="120px"
			    android:layout_height="50px"
			    android:text="@string/STR_QUXIAO"
			    android:id="@+id/btn_cancel" android:background="@drawable/btn_smallwhite"
			    android:layout_alignParentBottom="true" android:layout_marginBottom="30px"
			    android:layout_marginLeft="30px" android:textColor="@color/TITLE_BACKCOLOR" android:textSize="25px"/>
	    <Button
			    android:layout_width="120px"
			    android:layout_height="50px"
			    android:text="@string/STR_CHONGZHI"
			    android:id="@+id/btn_charge" android:background="@drawable/btn_smallgreen"
			    android:layout_alignParentRight="true" android:layout_alignParentBottom="true"
			    android:layout_marginBottom="30px" android:layout_marginRight="30px" android:textColor="#FFFFFF"
			    android:textSize="25px"/>
    </RelativeLayout>
</RelativeLayout>